Adds title, edits description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Pointer3000</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -10,6 +10,8 @@
     <div id="what">What's going on here?</div>
     <div id="about">
       <a href="https://github.com/ezekielaquino/Pointer3000">
+      Supercharged pointer interaction™<br/>
+      <br/>
       See those numbers to the right? That's what
       Pointer3000 gives you. It's is a simple tiny
       JS utility that gives you values of distance, rotation,
