Adds second demo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     <span class="line line--top line--right"><img src="text.svg" /></span>
     <span class="line line--low line--left"><img src="text.svg" /></span>
     <span class="line line--low line--right"><img src="text.svg" /></span>
+
+    <nav class="nav">
+      <ul>
+        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/">Home</a></li>
+        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/index2.html">Stretchies</a></li>
+      </ul>
+    </nav>
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
