--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
         var n = props.hyp.map(0, window.innerWidth, 1, 4);
         var m = props.hyp.map(0, window.innerWidth, 1, 0.1);
 
-        stretchy.style.transform = 'scale('+ s +', '+ m +')';
+        stretchy.style.transform = 'scale('+ s +', '+ m +') translate3d(0,0,0)';
         dash.style.transform = 'rotate('+ props.deg +'deg) scale('+ s +','+ n +') translate3d(0,0,0)';
       }
     });
