--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <a href="https://github.com/ezekielaquino/Pointer3000">
       Supercharged pointer interaction™<br/>
       <br/>
-      See those numbers to the right? That's what
-      Pointer3000 gives you. It's is a simple tiny
+      Pointer3000 is a simple tiny
       JS utility that gives you values of distance, rotation,
       position (more to come) of your mouse pointer relative to
       one or multiple points that you define. That's it. It
@@ -48,7 +47,7 @@
     </nav>
   </body>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <script src="prefixfree.js"></script>
   <script src="pointer3k.min.js"></script>
   <script src="conicgradient.min.js"></script>
   <script>
@@ -77,7 +76,7 @@
           cy: circles[3].offsetTop + radius
         }
       },
-      console: true
+      console: false
     });
 
     Pointer3k(false);
