--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <nav class="nav">
       <ul>
-        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/">Home</a></li>
-        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/index2.html">Stretchies</a></li>
+        <li class="nav__item"><a href="https://ezekielaquino.github.io/Pointer3000/">Home</a></li>
+        <li class="nav__item"><a href="https://ezekielaquino.github.io/Pointer3000/index2.html">Stretchies</a></li>
       </ul>
     </nav>
   </body>
