--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,8 @@
     <span class="stretchy stretchy--left"><img src="text.svg" /><span></span></span>
     <nav class="nav">
       <ul>
-        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/">Home</a></li>
-        <li class="nav__item"><a href="http://ezekielaquino.com/Pointer3000/index2.html">Stretchies</a></li>
+        <li class="nav__item"><a href="https://ezekielaquino.github.io/Pointer3000/">Home</a></li>
+        <li class="nav__item"><a href="https://ezekielaquino.github.io/Pointer3000/index2.html">Stretchies</a></li>
       </ul>
     </nav>
   </body>
